--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test:unit": "test:unit"
   },
   "dependencies": {
     "vue": "^3.0.5",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/test-utils": "^1.2.2",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
+    "jest-serializer-vue": "^2.0.2",
+    "prettier": "^2.3.2",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vue-jest": "^3.0.7",
     "vue-tsc": "^0.2.2"
   }
 }
