--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:unit": "jest"
   },
   "dependencies": {
+    "@types/good-storage": "^1.1.0",
+    "vant": "^3.2.0",
     "vue": "^3.0.5",
     "vue-router": "4"
   },
@@ -25,10 +27,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.0.6",
+    "normalize.css": "^8.0.1",
     "prettier": "^2.3.2",
+    "stylus": "^0.54.8",
     "ts-jest": "^26.5.6",
     "typescript": "^4.3.2",
     "vite": "^2.4.4",
+    "vite-plugin-style-import": "^1.1.1",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.2.2"
   }
