--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@types/good-storage": "^1.1.0",
+    "good-storage": "^1.1.1",
     "vant": "^3.2.0",
     "vue": "^3.0.5",
-    "vue-router": "4"
+    "vue-router": "4",
   },
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
