--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.11",
+    "autoprefixer": "^10.3.1",
     "babel-jest": "^26.5.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
