--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vant": "^3.2.0",
     "vue": "^3.0.5",
     "vue-router": "4",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.15.0",
