--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/good-storage": "^1.1.0",
+    "axios": "^0.21.1",
     "good-storage": "^1.1.1",
     "vant": "^3.2.0",
     "vue": "^3.0.5",
